fix namecard z-index bug

--- a/docs/style.css
+++ b/docs/style.css
@@ -279,7 +279,7 @@ a {
   align-items: center;
   height: 7em;
   width: 100%;
-  z-index: 2;
+  z-index: 5;
   background-color: #eeeeee; }
 
 @media only screen and (min-width: 960px) and (min-width: 768px) {
