--- a/src/sass/components/_namecard.scss
+++ b/src/sass/components/_namecard.scss
@@ -3,7 +3,7 @@
   @include flex(center);
   height: $namecard-height;
   width: 100%;
-  z-index: 2;
+  z-index: 5;
   // background: linear-gradient(0deg, $theme-pri-dark, $theme-pri-light);
   background-color: $color-bg-dark;
   @media only screen and (min-width: 960px) {
